# shell-term-background

./: .gitignore  .pre-commit-config.yaml  ChangeLog  Makefile  NEWS.md  README.md  README.rst  __pkginfo__.py  kterm-background.sh  pyproject.toml  pyrightconfig.json  setup.py  term-background.bash  term-background.ksh  term-background.sh  term-background.zsh  term_background.py  zterm-background.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
admin-tools/: check-2.4-2.7-versions.sh  check-3.0-3.2-versions.sh  check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-3.6-3.11-versions.sh  make-dist-2.4-2.7.sh  make-dist-3.0-3.2.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  make-dist-3.6-3.11.sh  make-dist-newest.sh  make-dist.sh  merge-for-2.4.sh  merge-for-3.0.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-3.6-3.11-versions  pyenv-newest-versions  pyenv-versions  setup-master.sh  setup-python-2.4.sh  setup-python-3.0.sh  setup-python-3.3.sh  setup-python-3.6.sh
term_background/: __init__.py  __main__.py  version.py
test/: shunit2  test_term_background.bash  test_term_background.ksh  test_term_background.py  test_term_background.zsh
