[build-system]
requires = [
    "setuptools>=70.0.0",
]
[project]
authors = [
   {name = "Rocky Bernstein"},
   {email = "rb@dustyfeet.com"}
]
name = "term-background"
description = "Determine if a shell has a light or dark background"
dependencies = []
readme = "README.rst"
license = {text = "GPL3"}
maintainers = [
    {name = "Rocky Bernstein"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 2.4",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/shell-term-background"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]

[tool.setuptools.dynamic]
version = {attr = "term_background.version.__version__"}
